// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MuteButton renders off 1`] = `
<img
  class="mute-button"
  src="svg/mute_on.svg"
/>
`;

exports[`MuteButton renders on 1`] = `
<img
  class="mute-button"
  src="svg/mute_off.svg"
/>
`;
